// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AtForm Snap render initial AtForm 1`] = `
<form
  class="at-form"
/>
`;

exports[`AtForm Snap render initial AtForm 2`] = `
<form
  class="at-form"
  reportsubmit="true"
/>
`;
